@@ -181,6 +181,7 @@ enum {
 	LONG_OPT_WHOLE,
 	LONG_OPT_WRAP,
 	LONG_OPT_X11,
+	LONG_OPT_ARGV,
 	LONG_OPT_ENUM_END
 };
 
